paperIcon-alignment issue

--- a/src/assets/Content/Styles/editableField.less
+++ b/src/assets/Content/Styles/editableField.less
@@ -57,7 +57,7 @@ editable-field input[type=text].editable-field-input {
     }
 }
 .xrs-papericon {
-    font-size: 26px;
+    font-size: 28px;
     margin-left: 16px;
     margin-top: 5px;
     line-height: 100%;
