--- a/src/styles.less
+++ b/src/styles.less
@@ -58,15 +58,8 @@
     outline: none;
     vertical-align: middle;
     border-radius: 3px;
-    @media (max-width: 1024px) {
-      margin-top: 3px;
+    @media (max-width: 1023px) {
       height :68px;
-    }
-   
-    @media (min-width: 100px) and (max-width:900px) {
-      font-size: 24px;
-      width: 87%;
-      padding-bottom: 19px;
     }
   }
 
